# html-tictactoe

./: README.md  pyproject.toml
.github/workflows/: deploy.yml
generator/: __main__.py  model.py  template.html  tictactoe.py
