[tool.poetry]
name = "html-tictactoe"
version = "0.1.0"
description = ""
authors = ["sigmasternchen <git@sigma-star.io>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
jinja2 = "^3.1.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
